--- a/source/sass/blocks/price.scss
+++ b/source/sass/blocks/price.scss
@@ -45,9 +45,9 @@
     z-index: -1;
     background-image:
       image-set(url("../../img/price/weights@1x.webp") type("image/webp") 1x,
-      url("../../img/price/weights@2x.webp") type("image/webp") 2x,
-      url("../../img/price/weights@1x.png") type("image/png") 1x,
-      url("../../img/price/weights@2x.png") type("image/png") 2x);
+        url("../../img/price/weights@2x.webp") type("image/webp") 2x,
+        url("../../img/price/weights@1x.png") type("image/png") 1x,
+        url("../../img/price/weights@2x.png") type("image/png") 2x);
     background-size: cover;
     background-position: bottom;
     background-repeat: no-repeat;
@@ -379,5 +379,10 @@
 }
 
 .price__item-buy {
-padding: 25px;
+  padding: 25px;
+  margin-bottom: 10px;
+}
+
+.price__item-buy:last-child {
+  margin-bottom: 0;
 }
