--- a/source/sass/common/global.scss
+++ b/source/sass/common/global.scss
@@ -6,7 +6,8 @@
 }
 
 body {
-  font-family: "Roboto Condensed Regular", "Arial", sans-serif;
+  font-family: $main-font;
+  font-weight: 400;
   font-size: 14px;
   line-height: 22px;
   color: $basic-dark;
